# tinylog

./: .gitignore  README.md  t_amend.txt
Day01/: Log.cpp  Log.h  README.md
Day01/test/: testLog.cpp
Day02/: CMakeLists.txt  Logger.h  README.md
Day02/test/: CMakeLists.txt  testlog.cpp
Day03/: LogBuffer.h  LogFile.cpp  LogStream.cpp  LogStream.h  README.md
Day03/test/: testlog.cpp
Day04/: AsyncLogging.cpp  AsyncLogging.h  CMakeLists.txt
Day04/test/: testlog.cpp
